{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 19,
  "lineage": "4014b3d6-ad0d-e586-4b54-e351c766d5f6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472510080448:vpc/vpc-25fb4742",
            "cidr_block": "10.251.0.0/21",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7e983f17",
                "cidr_block": "10.251.0.0/21",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01d0bb85c4fd05823",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-25fb4742",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-eeedea89",
            "owner_id": "472510080448",
            "tags": {
              "Name": "Shared Services"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-019e22d685d524dae",
            "peer_owner_id": "472510080448",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-25fb4742",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "peer_to_shared"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "Dev",
              "IAC_Tool": "Terraform",
              "Name": "peer_to_shared",
              "Owner": "Brian Gaber"
            },
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "dependencies": [
            "data.aws_vpc.accepter",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:route-table/rtb-07af04b5b10a34c0a",
            "id": "rtb-07af04b5b10a34c0a",
            "owner_id": "655690556973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1a",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:route-table/rtb-032e98ae2e681a23d",
            "id": "rtb-032e98ae2e681a23d",
            "owner_id": "655690556973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1b",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:route-table/rtb-0aec861baa0365527",
            "id": "rtb-0aec861baa0365527",
            "owner_id": "655690556973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-public",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027dac450b2be6ef3",
            "route_table_id": "rtb-07af04b5b10a34c0a",
            "subnet_id": "subnet-0e3e477b933efbeae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0345fdc03306ce53b",
            "route_table_id": "rtb-032e98ae2e681a23d",
            "subnet_id": "subnet-07e412910ba368b8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b93b2ffbb671329e",
            "route_table_id": "rtb-0aec861baa0365527",
            "subnet_id": "subnet-068b3afb7242e2c58"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e43d8d2a1cb7410",
            "route_table_id": "rtb-0aec861baa0365527",
            "subnet_id": "subnet-0891ef7aa0a03fab4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-0e3e477b933efbeae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.131.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3e477b933efbeae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1a",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-07e412910ba368b8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.131.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e412910ba368b8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1b",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-068b3afb7242e2c58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.131.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068b3afb7242e2c58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-public-us-east-1a",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-0891ef7aa0a03fab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.131.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0891ef7aa0a03fab4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-public-us-east-1b",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff7f9987b57606d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:vpc/vpc-0cff7f9987b57606d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.131.0/24",
            "default_network_acl_id": "acl-00976b936b4c78b26",
            "default_route_table_id": "rtb-0e36e344e6cb02457",
            "default_security_group_id": "sg-0e917df7e7dc5e653",
            "dhcp_options_id": "dopt-2cbd7749",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cff7f9987b57606d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e36e344e6cb02457",
            "owner_id": "655690556973",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "25 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}